--- a/Task1_Prediction/notebook.ipynb
+++ b/Task1_Prediction/notebook.ipynb
@@ -458,12 +458,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "5c2bafc5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "OPENROUTER_API_KEY =PVT
+    "OPENROUTER_API_KEY =\"PVT\"\n"
    ]
   },
   {
